--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <link rel="apple-touch-icon" href="icon.png">
 
         <link rel="stylesheet" href="css/main.css">
-        <!-- imported font-awesome for header icon -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" href="" type="image/x-icon">
+        <script src="https://cdn.rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
+        <script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
+        <link rel="icon" href="./images/phish.png" type="image/x-icon">
 
         <meta name="theme-color" content="#fafafa">
     </head>
@@ -29,7 +29,8 @@
 
         <div id="tank">
             <div class="header-text">
-                <h1 class="title">Fish Tank</h1>
+                <div id="water-text"></div>
+                <!-- <h1 class="title">Fish Tank</h1> -->
             </div>
             <div id="bubbles"></div>
         </div>
