--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         <div id="tank">
             <div class="header-text">
                 <div id="water-text"></div>
-                <!-- <h1 class="title">Fish Tank</h1> -->
             </div>
             <div id="bubbles"></div>
+            <div class="fish">
+                <img src="/images/dory.svg" alt="">
+            </div>
         </div>
         <script src="js/main.js"></script>
     </body>
