--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
                 <div id="water-text"></div>
             </div>
             <div id="bubbles"></div>
-            <div class="fish">
-                <img src="/images/dory.svg" alt="">
+            <div class="fish1">
+                <img class="dory" src="/images/dory.svg" alt="">
+            </div>
+            <div class="fish2">
+                <img class="nemo" src="/images/nemo.svg" alt="">
+            </div>
+            <div class="fish3">
+                <img class="puffer" src="/images/puffer.svg" alt="">
             </div>
         </div>
         <script src="js/main.js"></script>
