updated live image fix

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             </div>
             <div id="bubbles"></div>
             <div class="fish1">
-                <img class="dory" src="/images/dory.svg" alt="">
+                <img class="dory" src="./images/dory.svg" alt="">
             </div>
             <div class="fish2">
-                <img class="nemo" src="/images/nemo.svg" alt="">
+                <img class="nemo" src="./images/nemo.svg" alt="">
             </div>
             <div class="fish3">
-                <img class="puffer" src="/images/puffer.svg" alt="">
+                <img class="puffer" src="./images/puffer.svg" alt="">
             </div>
         </div>
         <script src="js/main.js"></script>
